<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="39dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_descrip"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="64dp"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:paddingStart="34dp"
        android:background="@drawable/login_border_bg"
        android:hint="@string/your_email"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/send_btn"
        android:layout_marginTop="34dp"
        android:layout_gravity="center"/>

</LinearLayout>