<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="73dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="51dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_phone"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="64dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:background="@drawable/otp_bg"
            android:hint="@string/otp_mobile"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginStart="28dp"
            android:background="@drawable/otp_bg"
            android:hint="@string/otp_mobile"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginStart="28dp"
            android:background="@drawable/otp_bg"
            android:hint="@string/otp_mobile"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginStart="28dp"
            android:background="@drawable/otp_bg"
            android:hint="@string/otp_mobile"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_btn"
        android:layout_marginTop="36dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="26dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#7C7D7E"
            android:text="@string/didn_t_receive"
            android:textSize="14sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/click_here"
            android:textColor="#FC6011"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>